# ray

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MODULE.bazel  README.md  SETUP.md  SUPPORT.md  WORKSPACE  package-lock.json  package.json  version.bzl
.bazelci/: presubmit.yaml
.cargo/: config.toml
.ci/spelling/: cspell-node.config.cjs  dictionary-custom-words.txt  dictionary-dapr-words.txt  dictionary-forbidden-words.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pre-commit-autoupdate.yaml
.husky/: pre-commit  prepare-commit-msg
crates/: BUILD
crates/apps/ray_cli_app/: Cargo.toml
crates/apps/ray_cli_app/src/: main.rs
crates/apps/ray_telemetry_api/: Cargo.toml
crates/libs/ray_core_lib/: Cargo.toml
crates/libs/ray_telemetry_lib/: Cargo.toml
crates/libs/ray_telemetry_lib/src/: mod.rs  telemetry.rs
crates/libs/ray_telemetry_lib/src/os/: android.rs  ios.rs  linux.rs  macos.rs  windows.rs
