# https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html#creating-the-second-package-in-the-workspace

[workspace]
members = [
  "crates/apps/ray_cli_app",
  "crates/apps/ray_telemetry_api",
  "crates/libs/ray_core_lib",
]

default-members = [
  "crates/apps/ray_cli_app",
  "crates/apps/ray_telemetry_api",
  "crates/libs/ray_core_lib",
]

[workspace.package]
license = "PolyForm-Small-Business-1.0.0 OR PolyForm-Strict-1.0.0"
edition = "2021"
rust-version = "1.76.0"

[package]
name = "ray"
version = "0.0.1"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ray-cli"
path = "crates/apps/ray_cli_app/src/bin/ray/main.rs"

[[bin]]
name = "ray-cli-lite"
path = "crates/apps/ray_cli_app/src/bin/ray-lite/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
